@@ -3,6 +3,10 @@ NOTE: We are looking for help with a few things:
       If you can help, please get in touch.  Thanks!
 
 Release x.x.x xxx xxxxxxxxx xx xxxx
+        Bug fixes:
+       #390 #395  Fix undefined behavior during parsing when compiled with
+                    -DXML_UNICODE that was introduced with Expat 2.0.1
+
         Other changes:
             #396  Windows: Drop support for Visual Studio <=8.0/2005
        #383 #393  Autotools: Improve handling of user (C|CPP|CXX|LD)FLAGS,
